--- a/settings.json
+++ b/settings.json
@@ -3,10 +3,10 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"ownerNumber": "6281220670449@s.whatsapp.net",
-"NomorOwner":"6281220670449", 
-"NomorOwner2":"+62 812-2067-0449", 
-"NamaOwner":"Lord KURRXDゑ", 
+"ownerNumber": "6289666380664@s.whatsapp.net",
+"NomorOwner":"6289666380664", 
+"NomorOwner2":"+62 896-6638-0664", 
+"NamaOwner":"Akomali4", 
 "Dana":"081220670449", 
 "Pulsa":"081220670449", 
 "Gopay":"081220670449", 
